Disable SendMouseMoveUITest.Probe flaky on Win

Bug: 827549
Change-Id: Id6575363580a30d196e81926ba37c4e6bd1829fa
Tbr: grt@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/987523
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547178}
Former-commit-id: 5f24b9f8d3235da25621a579bbd9f05408c1302e